lots more done - index and show pages for user and event models show lots of info, have linked js to event show page and will hopefully use this to change the formatting of the predictions depending on the type of prediction.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Hello!</h1>
 
 <% @events.each do |event| %>
-  <div><%= link_to event.name, event %><div>
+  <div><%= link_to event.name, event %>  (<%= event.event_status %>)<div>
 <% end %>
+
