--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,14 @@
 
   <body>
 
+    <header>
+      <ul>
+        <li><%= link_to('Users', '/users') %></li>
+        <li><%= link_to('Events', '/events') %></li>
+      </ul>
+    </header>
+
+
     <%= yield %>
 
   </body>
