added event creation form.  confirmed it works, including the datetimes and stuff.  Yay.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -4,3 +4,4 @@
   <div><%= link_to event.name, event %>  (<%= event.event_status %>)<div>
 <% end %>
 
+<%= link_to 'Create a new event', 'events/new' %>
