--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,7 @@
-<div class="row">
-  <div>
+<div class="page">
+  <div class="container">
+  <h1>Create a new event</h1>
+  <p><%= link_to 'Return to all events', '/events' %></p>
     <%= form_for @event do |form| %>
       <%= form.label :name %>
       <%= form.text_field :name %>
